bg-overflow issue fix

--- a/src/index.css
+++ b/src/index.css
@@ -28,11 +28,11 @@
 }
 
 .contact{
-  height: 73.5vh;
+  height: 76vh;
 }
 
 .about{
-  height: 65.8vh;
+  height: 69vh;
 } 
 
 .text-form{
